syntax = "proto3";

option java_package = "ru.arlen";

package akka2grpc;

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloToAll (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}